Mon Oct 11 00:37:52 BST 2004  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fixes to the NickServ plugin

Sat Oct 09 23:23:24 BST 2004  Tom Gilbert <tom@linuxbrit.co.uk>

  * Keyword searching

Fri Oct 08 00:40:07 BST 2004  Tom Gilbert <tom@linuxbrit.co.uk>

  * fixed insult plugin
  * fixed excuse plugin

Thu Oct 07 23:28:05 BST 2004  Tom Gilbert <tom@linuxbrit.co.uk>

  * searching for urls in the url plugin
  * roshambo (rock/paper/scissors) plugin from Hans Fugal <hans@fugal.net>

Sat Apr 17 20:56:50 BST 2004  Tom Gilbert <tom@linuxbrit.co.uk>

  * Oh, found new tv plugin in my inbox from ages ago, but it's still not
  working so I guess it changed again since then
  * New eightball plugin from Daniel Free

Sat Apr 17 20:44:43 BST 2004  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fixed the babelfish parser so translate works again.
  * Misc other fixes
  * Note some plugins are broken (excuse,insult) because the server they use
    went away. I don't know of a replacement right now.
  * tv plugin seems broken, perhaps the html changed.

Thu Jan 15 21:37:38 GMT 2004  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fixes for ruby 1.8

0.9.8
* new plugin from Alan Third <alan@idiocy.org>, allows you to search and list
  UK TV programmes.

0.9.7
* various plugin updates
* fix (again) for C to F temp conversion in weather plugin
* channel topic patch from Peter Suschlik, gives plugin better access to topic
  changes and related information

0.9.6
* changes to layout of slashdot plugin output
* freshmeat plugin, show latest updates or search
* fix to C to F temp conversion in weather plugin
* status command returns some bot status
* fortune plugin
* using BDB::Btree everywhere now, instead of BDB::Hash, because the Btree api
  allows me to set my own key comparison function. This is needed to keep
  supporting case insensitivity (vital for IRC), which was sadly broken in
  0.9.5 :( All existing dbs will be upgraded automatically.